# mlops-course

./: README.md
lecture_2/: Makefile  pyproject.toml
lecture_2/notebook/: example_training_pipe.ipynb
