[tool.poetry]
name = "mlops-course"
version = "0.1.0"
description = "MLOps dependencies"
authors = ["Shuhrat Khalilbekov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pip = "24.2"
requests = "2.28.2"
numpy = "1.26.4"
pandas = "2.1.1"
python-box = "6.1.0"
PyYAML = "^6.0"
python-dotenv = "0.21.0"
catboost = "1.2.5"
openpyxl = "3.1.2"
xlrd = "2.0.1"
plotly = "5.21.0"
scipy = "1.13.0"
tqdm = "4.66.1"
uvicorn = "^0.29.0"
fastapi = "0.104.0"

[tool.poetry.dev-dependencies]
isort = "5.3.2"
black = "22.6.0"
pytest = "8.3.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"

[tool.isort]
line_length = 88
multi_line_output = 5

[tool.black]
line-length = 88
target-version = ["py38"]
skip-string-normalization = true
skip-magic-trailing-comma = true

[tool.pylint.'FORMAT']
min-similarity-lines = 10
fail-under = 9.7
py-version = 3.9
good-names=[
    'bp',
    'db',
    'i',
    'j',
    'k',
    'ex',
    'Run',
    'x', 'x1', 'x2', 'x3', 'x4', 'x5',
    'y',
    'G',
    'H',
    'h',
    'df',
    'MLP',
]
max-line-length = 120
ignored-classes = [
    'scoped_session', 'json', 'Column',
]
disable = [
    'locally-disabled', 'suppressed-message',
    'missing-module-docstring', 'missing-class-docstring',
    'missing-function-docstring', 'too-few-public-methods',
    'wrong-import-position', 'import-outside-toplevel',
    'fixme', 'too-many-locals', 'too-many-arguments',
    'too-many-instance-attributes', 'c-extension-no-member'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
